// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.NavBar interface testing close(setStateCallBack) 1`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom uu5-bricks-nav-bar-open"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": null,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar interface testing close(setStateCallBack) 2`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar interface testing getOffset() 1`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
          offset={70}
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar interface testing isOpen() return false 1`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar interface testing isOpen() return true 1`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom uu5-bricks-nav-bar-open"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": null,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar interface testing open(setStateCallBack) 1`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar interface testing open(setStateCallBack) 2`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom uu5-bricks-nav-bar-open"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": null,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar interface testing toggle(setStateCallBack) should close navbar 1`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom uu5-bricks-nav-bar-open"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar interface testing toggle(setStateCallBack) should close navbar 2`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": null,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar interface testing toggle(setStateCallBack) should open navbar 1`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar interface testing toggle(setStateCallBack) should open navbar 2`] = `
<nav
  className="color-schema-grey uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m uu5-bricks-nav-bar-fixed-bottom uu5-bricks-nav-bar-open"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="fixed='bottom'"
      id="uuID02"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": null,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID03"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID04"
          >
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID05"
          >
            MyProfile
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;
